added shipping cost usecase